gitops/generated/demo1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo1
  namespace: demo1

spec:
  replicas: 1

  selector:
    matchLabels:
      app: demo1

  template:
    metadata:
      labels:
        app: demo1

    spec:
      containers:
      - name: demo1
        image: nginx:alpine
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi

        readinessProbe:
          tcpSocket:
            port: 80

          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          tcpSocket:
            port: 80

          initialDelaySeconds: 30
          periodSeconds: 20
