gitops/generated/demo1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo1
  namespace: demo1

spec:
  selector:
    app: demo1

  ports:
  - name: http
    port: 80
    targetPort: 80

  type: ClusterIP
