gitops/generated/demo1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo1
  namespace: demo1

spec:
  ingressClassName: traefik

  rules:
  - host: demo1.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: demo1
            port:
              number: 80
